# blog

./: README.md  all.sql
auth/: .env  .sql  Cargo.toml  index.html  key
auth/src/: auth.rs  error.rs  handle.rs  main.rs  model.rs
auth/templates/: forgot_password.html  index.html  login.html  register.html
backend/: .env  .sql  API.md  Cargo.toml  last.sql  route.copy
backend/src/: error.rs  lib.rs  main.rs  middleware.rs  model.rs  utils.rs
backend/src/dbs/: article_db.rs  catalogue_db.rs  comment_db.rs  mod.rs  tag_db.rs  user_db.rs
backend/src/handles/: article.rs  catalogue.rs  comment.rs  mod.rs  tag.rs  user.rs
backend/src/models/: article.rs  catalogue.rs  comment.rs  mod.rs  parameter.rs  state.rs  tag.rs  user.rs
blog_backend/: .env  .sql  API.md  Cargo.toml
blog_backend/src/: lib.rs  main.rs  middleware.rs  model.rs  utils.rs
blog_backend/src/dbs/: article_db.rs  mod.rs  tag_db.rs  user_db.rs
blog_backend/src/handles/: article.rs  tag.rs  user.rs
blog_front/: api.md  package-lock.json  package.json
blog_front/components/: ArticleList.js  Layout.js  Modal.js  PostCard.js  ProtectedComponent.js  TagsList.js  useAuth.js
blog_front/pages/: _app.js  index.js
blog_front/pages/posts/: [id].js  new.js
blog_front/pages/tags/: [id].js  new.js
blog_front/pages/users/: [id].js
blog_front/styles/: github.css
frontend/: .dockerignore  Dockerfile  api_list.js  api_md.md  docker-compose.yml  package-lock.json  package.json
frontend/components/: ArticleList.js  CataloguesList.js  CommentSection.js  FeatureArticleList.js  Layout.js  Modal.js  PostCard.js  ProtectedComponent.js  TagArticleList.js  TagsList.js  useAuth.js
frontend/pages/: _app.js  about.js  index.js
frontend/pages/catalogues/: [id].js  all.js  manage.js  new.js
frontend/pages/posts/: [id].js  new.js
frontend/pages/tags/: [id].js
frontend/pages/users/: [id].js
frontend/styles/: github.css
(+2 files in other folders)
