[package]
name = "auth"
version = "0.1.0"
edition = "2021"
default-run = "auth"
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["mysql", "chrono","runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.7"
tracing-subscriber = {version="0.3.18",features=["env-filter"]}
anyhow = "1.0.89"
axum = {version="0.7.4",features=["macros"]}
dotenv = "0.15.0"
rand = "0.8.5"
tracing = "0.1.40"
tower-http = { version = "0.6.0", features = ["trace", "cors", "fs"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
chrono = {version="0.4.38",features=["serde"]}
bcrypt = "0.15.1"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
axum_csrf = {version="0.10.0",features=["layer"]}
askama = "0.12.1"
tower = "0.5.1"
axum_static = "1.7.1"
cookie = "0.18.1"
uuid = { version = "1.0", features = ["v4"] }
tower-cookies = "0.10.0"
ninja = "0.0.1"
tera = "1.20.0"
