[package]
name = "blog_backend"
version = "0.1.0"
edition = "2021"
default-run= "blog_backend"
[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["mysql", "chrono","runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = {version="0.12.7",features=["json"]}
tracing-subscriber = {version="0.3.18",features=["env-filter"]}
anyhow = "1.0.89"
axum = {version="0.7.4",features=["macros"]}
dotenv = "0.15.0"
rand = "0.8.5"
tracing = "0.1.40"
tower-http = { version = "0.6.0", features = ["trace","cors","fs"] }
chrono = {version="0.4.38",features=["serde"]}
bcrypt = "0.15.1"
lazy_static = "1.5.0"
axum_session = "0.14.2"
tower-sessions = "0.13.0"
thiserror = "1.0.64"
http = "1.1.0"
